--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ button{background-color:transparent;}
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	align-items: center
+	align-items: center;
 }
 .button{cursor:pointer;margin-right:10px;}
 .button-1 img{
@@ -35,3 +35,42 @@ button{background-color:transparent;}
 .button-3 img{width:60px;padding-bottom:5px;}
 .button-plus img{width:40px;padding-bottom:15px;margin-left:10px;margin-right:5px;}
 .button-less img{width:60px;padding-bottom:5px;margin-right:5px;}
+
+/*range*/
+#ranger{
+	margin-left:80px;
+}
+input[type=range]::-webkit-slider-thumb{
+	cursor:pointer;
+	border-radius:50%;
+}
+input[type=range]::-moz-range-thumb{
+	cursor:pointer;
+	border-radius:50%;
+}
+input[type=range]::-ms-thumb{
+	cursor:pointer;
+	border-radius:50%;
+}
+input[type=range]::-webkit-slider-runnable-track {
+	width: 200px;
+	height: 15px;
+	cursor: pointer;
+	background:black;
+	border-radius:50%;
+}
+input[type=range]::-moz-range-track {
+	width: 200px;
+	height: 15px;
+	cursor: pointer;
+	background:black;
+	border-radius:10px;
+}
+
+input[type=range]::-ms-track {
+	width: 100%;
+	height: 15px;
+	cursor: pointer;
+	background:black;
+	border-radius:10px;
+}
